@startuml

abstract class BaseEntity {
    {field}- id: final UUID unmodifiable
    {field}- created: Instant unmodifiable
    ---
    {method}+ getters
    {method}+ equals(Object thatObject): boolean
}

class User {
    type: Aggregate
    ---
    {field}- name: String [0-9a-zA-z\-]+ unmodifiable
    {field}- email: String
    ---
    {method}+ getters
}

class UserProfile {
    type: Value object
    ---
    {field}- displayName: String nullable
    {field}- firstName: String nullable
    {field}- lastName: String nullable
    {field}- birthDay: LocalDate nullable
    {field}- bio: String nullable
    {field}- hoursPlayed: int not negative
    {field}- avatar: tbd nullable
    ---
    {method}+ getters

}

BaseEntity <|-- User: extends

User "1" o-- "1" UserProfile: has a

@enduml